@@ -76,4 +76,29 @@
 			<version>1.7.5</version>
 		</dependency>
 	</dependencies>
+
+
+	<profiles>
+		<profile>
+			<id>jdk19</id>
+			<activation>
+				<jdk>9-ea</jdk>
+			</activation>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+
+						<configuration>
+							<argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+
+			</build>
+		</profile>
+
+	</profiles>
 </project>
